--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,5 +1,9 @@
+$white: #fff;
+$light-grey: #f8f8f8;
+$orange: #ff6c00;
+
 .footer {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   font-family: "RobotoRegular";
