--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,4 +5,5 @@
 @import "header.scss";
 @import "footer.scss";
 @import "03-registration.scss";
+@import "05-saved-games.scss";
 @import "fonts.scss";
