--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,6 @@
-/*
-   Import partials below
-*/
+@import 'reset';
 @import 'normalize';
+@import 'header';
+@import 'login';
+@import 'footer';
+@import 'fonts';
