--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,5 +6,6 @@
 @import "footer.scss";
 @import "03-registration.scss";
 @import "05-saved-games.scss";
+@import "05-1-saved-games.scss";
 @import "07-game-summary.scss";
 @import "fonts.scss";
