--- a/src/sass/05-saved-games.scss
+++ b/src/sass/05-saved-games.scss
@@ -3,7 +3,7 @@ $light-grey: #f8f8f8;
 $orange: #ff6c00;
 $grey: #444;
 
-.saved-games {
+.saved-games-1 {
   font-family: "RobotoRegular";
   display: flex;
   flex-direction: column;
@@ -13,11 +13,6 @@ $grey: #444;
   padding-top: 60px;
   background-color: $light-grey;
 
-  .options-info {
-    display: flex;
-    flex-direction: row;
-  }
-
   img {
     display: block;
     position: absolute;
@@ -25,108 +20,9 @@ $grey: #444;
     top: 20px;
   }
 
-  li,p {
-    display: block;
-    text-align: center;
-  }
-
-  p {
-    display: block;
-    font-size: 80%;
-    color: #888;
-    width: 70%;
-    text-align: center;
-    margin: 30px auto 0px auto;
-
-  }
-
-  ul,li p {
-    color: $orange;
-    text-decoration: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li p {
-    font-size: 110%;
-  }
-
-  li p::before {
-    content: "[ ";
-  }
-
-  li p::after {
-    content: "]";
-  }
-
-  li {
-    font-size: 120%;
-    position: relative;
-  }
-
-  .cross {
-    display: block;
-    position: absolute;
-    right: 10px;
-    top: 0px;
-    fill: $orange;
-  }
-
-  h3 {
-    display: none;
-    font-family: "UbuntuMedium";
-    font-weight: lighter;
-    text-align: left;
-    color: $grey;
-  }
-
-  a {
-    display: block;
-    margin: 0 auto;
-    font-size: 60%;
-    text-align: center;
-    color: #008;
-  }
-  .statistics {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 20px auto 0 auto;
-    width: 210px;
-    font-size: 60%;
-    color: $orange;
-    text-align: center;
-    &__element {
-      padding: 0 10px;
-    }
-    &__element:nth-of-type(2) {
-      border-left: solid #ccc 1px;
-      border-right: solid #ccc 1px;
-    }
-    p {
-      margin: 5px auto 0px auto;
-    }
-  }
-  button {
-    display: block;
-    font-family: "UbuntuMedium";
-    font-size: 80%;
-    width: 150px;
-    height: 35px;
-    color: $white;
-    background-color: $orange ;
-    border-radius: 5px;
-    border-color: #ffac60;
-    margin: 20px auto;
-    text-align: center;
-  }
-  .create-game1, .my-account1 {
-    display: none;
-  }
   .saved-game, .create-game, .my-account {
     display: flex;
     font-family: "RobotoLight";
-    font-size: 110%;
     background-color: $white;
     border-right: solid 2px #ddd;
     border-bottom: solid 2px #ddd;
@@ -139,43 +35,36 @@ $grey: #444;
       margin: auto 10px;
       text-align: left;
       vertical-align: middle;
+      font-size: 80%;
+      color: #888;
+      width: 70%;
+      color: $grey;
+      text-decoration: none;
+      padding: 0;
+      font-size: 110%;
     }
   }
 }
 
 @media only screen and (min-width: 320px) {
-  .saved-games {
+  .saved-games-1 {
     width: 260px;
     height: 390px;
-    .options {
-        display: none;
-    }
   }
 }
 
 @media only screen and (min-width: 480px) {
-  .saved-games {
+  .saved-games-1 {
     width: 420px;
     height: 710px;
     font-size: 140%;
     padding-top: 60px;
-    .statistics {
-      width: 260px;
-    }
-    button {
-      width: 200px;
-      height: 40px;
-      margin-top: 50px;
-      margin-bottom: 40px;
-    }
+
     .saved-game, .create-game, .my-account {
       margin-top: 10px;
       margin-bottom: 20px;
       height: 50px;
       padding-left: 10px;
-    }
-    p {
-      margin: 40px auto;
     }
     .icon {
       width: 30px;
@@ -184,7 +73,7 @@ $grey: #444;
 }
 
 @media only screen and (min-width: 768px) {
-  .saved-games {
+  .saved-games-1 {
     width: 470px;
     height: 283px;
     font-size: 120%;
@@ -194,76 +83,32 @@ $grey: #444;
     background-color: $white;
     margin-top: 50px;
     margin-bottom: 340px;
-    .info {
-      display: flex;
-      flex-direction: column;
-    }
-    h3 {
-      display: block;
-      margin: 0;
-      margin-bottom: 20px;
-    }
-    li {
-      font-size: 90%;
-    }
-    .options {
-      display: block;
-      .saved-game1, .create-game1, .my-account1 {
-        display: flex;
-        font-family: "RobotoLight";
-        font-size: 110%;
-        border-right: solid 2px #ddd;
-        border-bottom: solid 2px #ddd;
-        vertical-align: middle;
-        height: 40px;
-        padding-left: 8px;
-        margin-right: 30px;
-        margin-bottom: 5px;
-        width: 150px;
-        background-color: $light-grey;
-        p {
-          display: block;
-          margin: auto 10px;
-          text-align: left;
-          vertical-align: middle;
-        }
-      }
-      svg {
-        width: 24px;
-      }
-    }
-    .saved-game, .create-game, .my-account {
-      display: none;
-    }
-    button {
-      margin: 30px auto 0 auto;
-      width: 150px;
-      height: 35px;
-      font-size: 80%;
-    }
+
     img {
       display: none;
     }
-    li,p {
-      text-align: left;
-      max-width: 280px;
-    }
-    p {
-      margin: 40px 0 10px 0;
-    }
-    a{
-      text-align: left;
-    }
-    .statistics {
-      margin: 0;
-      padding: 0;
-      width: 230px;
-      text-align: center;
+
+    .saved-game1, .create-game1, .my-account1 {
+      display: flex;
+      font-family: "RobotoLight";
+      font-size: 110%;
+      border-right: solid 2px #ddd;
+      border-bottom: solid 2px #ddd;
+      vertical-align: middle;
+      height: 40px;
+      padding-left: 8px;
+      margin-right: 30px;
+      margin-bottom: 5px;
+      width: 150px;
+      background-color: $light-grey;
       p {
-        text-align: center;
+        display: block;
+        margin: auto 10px;
+        text-align: left;
+        vertical-align: middle;
       }
-      &__element:nth-of-type(1) {
-        padding-left: 0;
+      svg {
+        width: 24px;
       }
     }
   }
