--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,4 +8,6 @@
 @import "05-saved-games.scss";
 @import "05-1-saved-games.scss";
 @import "07-game-summary.scss";
+@import "08-1-create-new-game";
+@import "08-create-new-game-form";
 @import "fonts.scss";
